--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -17,7 +17,9 @@
     </nav>
     <aside class="menu">
         <nav>
-            <img title="Fechar" src="../../../close.svg" alt="Botão de fechar">        
+            <figure title="Fechar" >
+                <img src="../../../close.svg" alt="Botão de fechar">        
+            </figure>
             <p class="hoverMenu"><a href="/">INÍCIO</a></p>
             <p class="hoverMenu"><a href="https://instagram.com/">INSTAGRAM</a></p>
             <p class="hoverMenu"><a href="https://www.paladins.com/">PALADINS</a></p>
