search form added

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -10,7 +10,11 @@
         <a href="/">INÍCIO</a>
         <a href="https://www.instagram.com/" target="_blank" rel="external" >INSTAGRAM</a>
         <a href="https://www.paladins.com/" target="_blank" rel="external" >PALADINS</a>
-        <a href="#"><i class="fas fa-search fa-lg"></i></a>
+        <a href="#"><i title="Busca" class="fas fa-search fa-lg"></i></a>
+        <form class="search">
+            <input placeholder="Procure..." type="search">
+            <button title="Buscar"><i class="fas fa-search fa-lg"></i></button>
+        </form>
     </nav>
     <nav title="Menu" class="hamburgerMenu">
         <i class="fas fa-bars"></i>
