--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -123,36 +123,34 @@ header > nav > a > i:hover {
 }
 
 .search {
-    display: flex;
-    border-bottom: 3px solid var(--BLUE-PRIMARY);
     position: absolute;
     right: 0;
     top: 35px;
 }
 
-.search > input:focus .search {
-    border-bottom: 3px solid var(--BLUE-TERTIARY);
-}
-
 .search > input {
+    width: 310px;
     font-size: 1.4em;
     border: 0;
     outline: 0;
-    padding: 0 5px;
+}
+
+.search > hr {
+    border: 0;
+    width: 100%;
+    height: 3px;
+}
+
+.search > hr:nth-of-type(1) {
+    background: var(--GRAY-SECONDARY);
+}
+
+.search > hr:nth-of-type(2) {
+    background: var(--BLUE-PRIMARY);
 }
 
 .search> input::-webkit-search-cancel-button {
     display: none;
-}
-
-.search > button {
-    background: var(--GRAY-SECONDARY);
-    border: 0;
-    width: 35px;
-    font-size: 1em;
-    cursor: pointer;
-    color: var(--BLUE-TERTIARY);
-    border-radius: 2px 2px 0 0;
 }
 
 @media screen and (max-width: 782px) {
