making search icon button

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -10,11 +10,18 @@
         <a href="/">INÍCIO</a>
         <a href="https://www.instagram.com/" target="_blank" rel="external" >INSTAGRAM</a>
         <a href="https://www.paladins.com/" target="_blank" rel="external" >PALADINS</a>
-        <a href="#"><i title="Busca" class="fas fa-search fa-lg"></i></a>
+        <i title="Busca" id="searchIcon" class="fas fa-search fa-lg"></i>
         <form class="search">
             <input placeholder="Procure..." type="search">
-            <hr>
-            <hr>
+            <div class="searchInputLines">
+                <hr>
+                <hr>
+            </div>
+            <ul>
+                <li>O baú de Halloween está de volta na loja!</li>
+                <li>O baú de Halloween está de volta na loja!</li>
+                <li>O baú de Halloween está de volta na loja!</li>
+            </ul>
         </form>
     </nav>
     <nav title="Menu" class="hamburgerMenu">
