added post list by focusing on input

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -10,7 +10,7 @@
         <a href="/">INÍCIO</a>
         <a href="https://www.instagram.com/" target="_blank" rel="external" >INSTAGRAM</a>
         <a href="https://www.paladins.com/" target="_blank" rel="external" >PALADINS</a>
-        <i title="Busca" id="searchIcon" class="fas fa-search fa-lg"></i>
+        <i title="Busca" class="fas fa-search fa-lg searchIcon"></i>
         <form class="search">
             <input placeholder="Procure..." type="search">
             <div class="searchInputLines">
