--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -133,10 +133,14 @@ header > nav > i:hover {
 }
 
 .search > input {
-    width: 300px;
+    width: 325.02px;
     font-size: 1.4em;
     border: 0;
     outline: 0;
+}
+
+.search > input::-webkit-search-cancel-button {
+    display: none;
 }
 
 .searchInputLines {
@@ -171,15 +175,23 @@ header > nav > i:hover {
 }
 
 .search > ul {
+    display: none;
+    flex-direction: column;
+    gap: 13px;
     background: var(--GRAY-TERTIARY);
     color: white;
     border-radius: 0 0 10px 10px;
     padding: 13px;
-    display: flex;
-    flex-direction: column;
-    gap: 13px;
     box-shadow: var(--SHADOW-PRIMARY);
     list-style-type: none;
+}
+
+.search > input:focus ~ ul {
+    display: flex;
+}
+
+.search > ul > li {
+    font-weight: normal;
 }
 
 @media screen and (max-width: 782px) {
