placed search in a separate folder

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -11,35 +11,10 @@
         <a href="https://www.instagram.com/" target="_blank" rel="external" >INSTAGRAM</a>
         <a href="https://www.paladins.com/" target="_blank" rel="external" >PALADINS</a>
         <i title="Busca" class="fas fa-search fa-lg openSearchBtn"></i>
-        <form class="search">
-            <img src="../../../close.svg" alt="Botão de fechar">
-            <input placeholder="Procure..." type="search">
-            <div class="searchInputLines">
-                <hr>
-                <hr>
-            </div>
-            <ul>
-                <li>O baú de Halloween está de volta na loja!</li>
-                <li>O baú de Halloween está de volta na loja!</li>
-                <li>O baú de Halloween está de volta na loja!</li>
-            </ul>
-        </form>
     </nav>
+        <%- include("../Search/index.ejs") %>
     <nav title="Menu" class="hamburgerMenu">
         <i class="fas fa-bars"></i>
-        <form class="search">
-            <img src="../../../close.svg" alt="Botão de fechar">
-            <input placeholder="Procure..." type="search">
-            <div class="searchInputLines">
-                <hr>
-                <hr>
-            </div>
-            <ul>
-                <li>O baú de Halloween está de volta na loja!</li>
-                <li>O baú de Halloween está de volta na loja!</li>
-                <li>O baú de Halloween está de volta na loja!</li>
-            </ul>
-        </form>
     </nav>
     <aside class="menu">
         <nav>
