making the responsive search

--- a/src/views/components/Search/index.ejs
+++ b/src/views/components/Search/index.ejs
@@ -1,6 +1,6 @@
 <%- include("styles.ejs") %>
 <form class="search">
-    <img src="../../../close.svg" alt="Botão de fechar">
+    <img title="Fechar" src="../../../close.svg" alt="Botão de fechar">
     <input placeholder="Procure..." type="search">
     <div class="searchInputLines">
         <hr>
@@ -10,5 +10,8 @@
         <li>O baú de Halloween está de volta na loja!</li>
         <li>O baú de Halloween está de volta na loja!</li>
         <li>O baú de Halloween está de volta na loja!</li>
+        <li>O baú de Halloween está de volta na loja!</li>
+        <li>O baú de Halloween está de volta na loja!</li>
     </ul>
 </form>
+<%- include("script.ejs") %>
