--- a/src/views/pages/Index/script.ejs
+++ b/src/views/pages/Index/script.ejs
@@ -37,7 +37,7 @@
 
     sliderPosts.forEach(post => {
         post.addEventListener("click", ()=> {
-           location = "/news"
+           location = "/post"
         })
     })
 
@@ -45,7 +45,7 @@
 
     posts.forEach(post => {
         post.addEventListener("click", ()=> {
-            location = "/news"
+            location = "/post"
         })
     })
     
