--- a/src/views/components/Search/styles.ejs
+++ b/src/views/components/Search/styles.ejs
@@ -3,6 +3,8 @@
 .search {
     display: none;
     position: relative;
+    width: 330px;
+    margin-left: 25px;
 }
 
 .search > img {
@@ -17,7 +19,7 @@
 }
 
 .search > input {
-    width: 330px;
+    width: 100%;
     font-size: 1.2em;
     border: 0;
     outline: 0;
