search is breaking down now

--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -6,6 +6,7 @@ header {
     align-items: center;
     justify-content: space-between;
     font-weight: bold;
+    flex-wrap: wrap;
 }
 
 header > div {
@@ -140,7 +141,7 @@ header > nav:nth-of-type(1) > i:hover {
     }
 }
 
-@media screen and (max-width: 460px){
+@media screen and (max-width: 460px) {
     
     header {
         align-items: flex-start;
