--- a/src/views/components/Search/styles.ejs
+++ b/src/views/components/Search/styles.ejs
@@ -3,7 +3,6 @@
 .search {
     display: none;
     position: relative;
-    width: 330px;
     margin-left: 25px;
 }
 
@@ -19,7 +18,7 @@
 }
 
 .search > input {
-    width: 100%;
+    width: 330px;
     font-size: 1.2em;
     border: 0;
     outline: 0;
@@ -81,6 +80,21 @@
 
 .search > ul > li {
     font-weight: normal;
+}
+
+@media (max-width: 719px) {
+    .search {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .search > input {
+        width: 100%;
+    }
+
+    .search > ul {
+        width: 100%;
+    }
 }
 
 </style>
