--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -45,6 +45,7 @@ header > div > a > p > strong {
 }
 
 .hamburgerMenu > i {
+    backface-visibility: hidden;
     transition: .5s;
 }
 
@@ -125,7 +126,6 @@ header > nav:nth-of-type(1) > i:hover {
 .menu > nav > figure:hover > img {
     transform: scale(1.1);
 }
-
 
 @media screen and (max-width: 782px) {
     
