--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -1,5 +1,9 @@
 <style>
 
+#headerWithSearch {
+    display: none;
+}
+
 header {
     margin: 40px;
     display: flex;
@@ -143,7 +147,7 @@ header > nav:nth-of-type(1) > i:hover {
 
 @media screen and (max-width: 460px) {
     
-    header {
+    #mainHeader {
         align-items: flex-start;
         flex-direction: column-reverse;
     }
