--- a/src/views/components/Search/styles.ejs
+++ b/src/views/components/Search/styles.ejs
@@ -1,7 +1,6 @@
 <style>
 
 .search {
-    display: none;
     position: relative;
     margin-left: 25px;
 }
@@ -85,7 +84,7 @@
 @media (max-width: 719px) {
     .search {
         width: 100%;
-        margin-left: 0;
+        margin: 5px 0 0 0;
     }
 
     .search > input {
