added firebase to the project

--- a/src/views/components/Header/styles.ejs
+++ b/src/views/components/Header/styles.ejs
@@ -85,6 +85,7 @@ header > nav:nth-of-type(1) > i:hover {
     display: flex;
     justify-content: flex-end;
     opacity: 0;
+    font-weight: bold;
 }
 
 .menu > nav {
