--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -12,6 +12,7 @@
 </head>
 <body>
     <%- include('../../components/Header/index.ejs') %>
+    <% console.log(posts) %>
     <Main>
         <section class="noticia">
             <figure>
