--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -12,7 +12,11 @@
 </head>
 <body>
     <%- include('../../components/Header/index.ejs') %>
-    <% console.log(posts) %>
+    <% db.collection("posts").onSnapshot(snapshot => {
+        snapshot.forEach(post => {
+            console.log(post.data())
+        })
+    }) %>
     <Main>
         <section class="noticia">
             <figure>
