added post time on search list

--- a/src/views/components/Search/index.ejs
+++ b/src/views/components/Search/index.ejs
@@ -7,11 +7,11 @@
         <hr>
     </div>
     <ul>
-        <li>O baú de Halloween está de volta na loja!</li>
-        <li>O baú de Halloween está de volta na loja!</li>
-        <li>O baú de Halloween está de volta na loja!</li>
-        <li>O baú de Halloween está de volta na loja!</li>
-        <li>O baú de Halloween está de volta na loja!</li>
+        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
+        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
+        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
+        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
+        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
     </ul>
 </form>
 <%- include("script.ejs") %>
