--- a/src/views/pages/Post/styles.ejs
+++ b/src/views/pages/Post/styles.ejs
@@ -9,8 +9,8 @@ main {
     display: flex;
 }
 
-.noticia  > figure {
-    max-width: 750px;
+.noticia > figure {
+    width: 750px;
     height: 393.75px;
 }
 
